fix gap

--- a/styles/SASS/global.SCSS
+++ b/styles/SASS/global.SCSS
@@ -1415,7 +1415,7 @@ header {
   }
   .mobileSection {
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 14px;
   }
   .doctor-Container {
     display: flex;
@@ -1423,7 +1423,7 @@ header {
     align-items: center;
     gap: 0px;
     margin-top: 40px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
   }
 }
 @media screen and (max-width: 375px) {
